# allinone-via-bazelmod

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  go.mod
.github/workflows/: bazel-multi-platform.yml  main.yml
bazel/: bazel.rc
doc/blog/: Benefits and challenges of monorepo development practices.md
frontend/react-app/: package-lock.json  package.json
frontend/react-app/src/: layout.js
frontend/react-app/src/app/: auth.js  error.jsx  layout.tsx  page.tsx
frontend/react-app/src/app/dashboard/: layout.jsx
frontend/react-app/src/app/dashboard/products/: page.jsx
frontend/react-app/src/app/dashboard/users/: page.jsx
frontend/react-app/src/app/lib/: actions.js  data.js  models.js  utils.js
frontend/react-app/src/app/login/: page.jsx
frontend/react-app/src/app/ui/: globals.css
frontend/react-app/src/app/ui/dashboard/: dashboard.module.css
frontend/react-app/src/app/ui/dashboard/footer/: footer.jsx  footer.module.css
frontend/react-app/src/app/ui/dashboard/navbar/: navbar.jsx  navbar.module.css
frontend/react-app/src/app/ui/dashboard/sidebar/: sidebar.jsx  sidebar.module.css
frontend/react-app/src/app/ui/dashboard/sidebar/menuLink/: menuLink.jsx  menuLink.module.css
frontend/react-app/src/app/ui/login/loginForm/: loginForm.jsx  loginForm.module.css
grpc_ecosystem/: MODULE.bazel  README.md
grpc_ecosystem/protobuf/: MODULE.bazel
grpc_ecosystem/protobuf/metrics/: BUILD.bazel  MODULE.bazel  metrics_service.proto
grpc_ecosystem/protobuf/support/: BUILD.bazel  pagination.proto
grpc_ecosystem/protobuf/user/: user.proto
leetcode_cpp/: MODULE.bazel
leetcode_cpp/algorithms_cpp/: MODULE.bazel  data_structures.md
leetcode_cpp/algorithms_cpp/linked_list/: forward_list.cc
leetcode_cpp/src/main/cpp/: BUILD.bazel  hello_world.cc
leetcode_cpp/src/main/cpp/0001.two_sum/: README.md  two_sum.cc  two_sum.h
leetcode_cpp/src/main/cpp/0002.add_two_numbers/: README.md  add_two_numbers.cc  add_two_numbers.h
leetcode_cpp/src/main/cpp/0011.container_with_most_water/: README.md  container_with_most_water.cc  container_with_most_water.h
leetcode_cpp/src/main/cpp/0015.3_sum/: README.md  three_sum.cc  three_sum.h
leetcode_cpp/src/main/cpp/0016.3sum_closest/: README.md  three_sum_closest.cc  three_sum_closest.h
leetcode_cpp/src/main/cpp/0018.4_sum/: README.md  four_sum.cc  four_sum.h
leetcode_cpp/src/main/cpp/0019.remove_nth_node_from_end_of_list/: README.md  remove_nth_node_from_end_of_list.cc  remove_nth_node_from_end_of_list.h
leetcode_cpp/src/main/cpp/0026.remove_duplicates_from_sorted_array/: README.md  remove_duplicates_from_sorted_array.h
leetcode_cpp/src/main/cpp/0027.remove_element/: README.md  remove_element.cc  remove_element.h
leetcode_cpp/src/main/cpp/0028.find_the_index_of_the_first_occurrence_in_a_string/: README.md  find_the_index_of_the_first_occurrence_in_a_string.cc  find_the_index_of_the_first_occurrence_in_a_string.h
leetcode_cpp/src/main/cpp/0031.next_permutation/: README.md  next_permutation.cc  next_permutation.h
leetcode_cpp/src/main/cpp/0042.trapping_rain_water/: README.md  trapping_rain_water.cc  trapping_rain_water.h
leetcode_cpp/src/main/cpp/0061.rotate_list/: README.md  rotate_list.cc  rotate_list.h
leetcode_cpp/src/main/cpp/0075.sort_colors/: README.md
leetcode_cpp/src/test/cpp/: BUILD.bazel
leetcode_cpp/src/test/cpp/0001.two_sum/: two_sum_test.cc
leetcode_cpp/src/test/cpp/0002.add_two_numbers/: add_two_numbers_test.cc
leetcode_cpp/src/test/cpp/0011.container_with_most_water/: container_with_most_water_test.cc
leetcode_cpp/src/test/cpp/0015.3_sum/: three_sum_test.cc
leetcode_cpp/src/test/cpp/0016.3sum_closest/: three_sum_closest_test.cc
leetcode_cpp/src/test/cpp/0018.4_sum/: four_sum_test.cc
leetcode_cpp/src/test/cpp/0019.remove_nth_node_from_end_of_list/: remove_nth_node_from_end_of_list_test.cc
leetcode_cpp/src/test/cpp/0026.remove_duplicates_from_sorted_array/: remove_duplicates_from_sorted_array_test.cc
leetcode_cpp/src/test/cpp/0027.remove_element/: remove_element_test.cc
leetcode_cpp/src/test/cpp/0028.find_the_index_of_the_first_occurrence_in_a_string/: find_the_index_of_the_first_occurrence_in_a_string_test.cc
leetcode_cpp/src/test/cpp/0031.next_permutation/: next_permutation_test.cc
leetcode_cpp/src/test/cpp/0042.trapping_rain_water/: trapping_rain_water_test.cc
leetcode_cpp/src/test/cpp/0061.rotate_list/: rotate_list_test.cc
leetcode_cpp/src/test/cpp/0075.sort_colors/: sort_colors_test.cc
toolchain/: BUILD.bazel
tools/: bazel.rc
