"""
Provides description for this workspace.
"""
module(
    name = "allinone-via-bazelmod",
    version = "0.0.1",
    compatibility_level = 1,
)

# Programming languages
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "protobuf", version = "26.0.bcr.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_go", version = "0.47.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_rust", version = "0.42.1")
bazel_dep(name = "rules_java", version = "7.5.0")
bazel_dep(name = "aspect_rules_js", version = "1.41.2")
bazel_dep(name = "rules_nodejs", version = "6.1.0")

# build plugins
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.6.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "stardoc", version = "0.6.2")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.76.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
