#workspace(name = "allinone-via-bazelmod")
#
#load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
#load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
##
##############################################################
### Define your own dependencies here using go_repository.
### Else, dependencies declared by rules_go/gazelle will be used.
### The first declaration of an external repository "wins".
##############################################################
##
#load("//:deps.bzl", "go_dependencies")
##
### gazelle:repository_macro deps.bzl%go_dependencies
#go_dependencies()
##
#go_rules_dependencies()
##
#go_register_toolchains(version = "1.19.5")
##
#gazelle_dependencies()
