load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "metrics_proto",
    srcs = [
#        "metrics_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
#        "//protobufs/support:support_proto",
#        "//protoc-gen-openapiv2/options:options_proto",
#        "@go_googleapis//google/api:annotations_proto",
    ],
)

#go_proto_library(
#    name = "metrics_go_proto",
#    compilers = ["@rules_go//proto:go_grpc"],
#    importpath = "github.com/xushaoxiao/allinone-via-bazelmod/grpc_ecosystem/protobufs/metrics",
#    proto = ":metrics_proto",
#    visibility = ["//visibility:public"],
#    deps = [
#        "//protobufs/support:pagination_proto",
#        "//protoc-gen-openapiv2/options:annotations_proto",
#        "@go_googleapis//google/api:annotations_go_proto",
#    ],
#)
#
#go_library(
#    name = "metrics",
#    embed = [":metrics_go_proto"],
#    importpath = "github.com/xushaoxiao/allinone-via-bazelmod/grpc_ecosystem/protobufs/metrics",
#    visibility = ["//visibility:public"],
#)
